# cart-pole

./: README.md  ResearchNote.md  a.py  b.py  c.py  d.py  driverCode_for_q_learning.py  dynamic_model.c  gym_souorce_code.py  index.html  motor_controller.cpp  motor_controller.hpp  pyproject.toml  sim_env.py  simply_exec.py  simply_exec2.py  test_main.py
.devcontainer/: devcontainer.json
3d-modeling/: inverted_pendulum.step  linear_guide_base.dwg  linear_guide_base.dxf  linear_guide_base.step  motor_bracket.dwg  motor_bracket.dxf  motor_bracket.step
arduino-control/: arduino-control.ino  globals.cpp  globals.hpp  stepper_motor_controller.cpp  stepper_motor_controller.hpp  timer.cpp  timer.hpp  uart.cpp  uart.hpp
arduino-encoder/: arduino-encoder.ino
arduino-motor/: arduino-motor.ino  stepper_motor_controller.cpp  stepper_motor_controller.hpp
cartpole_learning/: a.py  cart_pole_learning_by_dqn.py  driverCode_for_q_learning.py
control/: README.md  cartpole_nmpc.py  cartpole_pid.py  cartpole_state_observer.py  main.py  mpc.py  mpc_ver2.py  mpc_ver4.py  pyproject.toml  simulation.py  test.py  uart.py  uart_receiver.py
docs/: index.html
dqn/: cartpole_by_DQN.keras  cartpole_dqn.py
etc/: main.ts
execute_trained_model/: test.py
firmware/: README.md  firmware.ino  globals.cpp  globals.hpp  state_observer.cpp  state_observer.hpp  stepper_motor.hpp  timer.cpp  timer.hpp  (+5 more)
firmware/raspberrypipico-motor/: CMakeLists.txt  README.md  stepper_control.uf2
firmware/raspberrypipico-motor/scripts/: build
firmware/raspberrypipico-motor/src/: main.c  pid.c  pid.h
(+164 files in other folders)
